--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost/shop
 spring.datasource.username=postgres
-spring.datasource.password=1
+spring.datasource.password=root
 spring.jpa.generate-ddl=true
 
 spring.mustache.expose-request-attributes=true
